--- a/react-homework/package.json
+++ b/react-homework/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://22mchang.github.io/WDB-education/react",
+  "homepage": "http://22mchang.github.io/WDB-education",
   "name": "blockly-app",
   "version": "0.1.0",
   "private": true,
